# flipordrain

./: .env.example  .gitattributes  .gitignore  Anchor.toml  CHANGELOG.md  LICENSE  README.md  TROUBLESHOOTING.md  package-lock.json  package.json
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/components/: CoinFlip.tsx  CrashGuard.tsx  ErrorBoundary.tsx  ErrorToast.tsx  FlipCard.tsx  Header.tsx  Leaderboard.tsx  LiveFeed.tsx  NetworkBanner.tsx  ResultPanel.tsx  StatsBar.tsx  StreakMeter.tsx  TransactionHistory.tsx
app/src/hooks/: useFlip.ts  useProgram.ts  useSocket.ts
app/src/lib/: constants.ts  idl.json
app/src/styles/: animations.css
docs/: CONTROLS.md
programs/flipordrain/: Cargo.toml
programs/flipordrain/src/: constants.rs  errors.rs  lib.rs
programs/flipordrain/src/instructions/: claim_winnings.rs  double_or_nothing.rs  fund_vault.rs  initialize_vault.rs  mod.rs  place_flip.rs  resolve_flip.rs  toggle_pause.rs  withdraw_house.rs
programs/flipordrain/src/state/: flip_game.rs  mod.rs  player_stats.rs  vault.rs
server/: package-lock.json  package.json  tsconfig.json
server/src/: idl.json  index.ts  leaderboard.ts  listener.ts  resolver.ts  types.ts
tests/: flipordrain.ts  flipordrain_temp.ts
