[package]
name = "flipordrain"
version = "0.1.0"
description = "on-chain coin flip w/ verifiable randomness"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flipordrain"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.0"
anchor-spl = "1.0.0"
